--- a/src/styles.scss
+++ b/src/styles.scss
@@ -99,3 +99,75 @@
       }
     }
   }
+
+/* Dialog Header */
+::ng-deep .custom-dialog .p-dialog-header {
+  background: linear-gradient(90deg, #007ad9, #00bcd4);
+  color: #fff;
+  font-weight: 700;
+  font-size: 1rem;
+  padding: 1rem;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  text-align: center;
+}
+
+/* Dialog Content */
+::ng-deep .custom-dialog .p-dialog-content {
+  background-color: #fdfdfd;
+  padding: 2rem;
+  border-radius: 0 0 12px 12px;
+}
+
+/* Body Layout */
+.dialog-body {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+/* Info Text */
+.dialog-info {
+  text-align: center;
+  color: #555;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+/* Input Field */
+.form-field input {
+  width: 100%;
+  padding: 0.7rem 1rem;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+  transition: border-color 0.3s;
+  margin-bottom: 20px;
+
+  .p-inputtext{
+    margin-bottom: 20px !important;
+  }
+
+  &:focus {
+    border-color: #007ad9;
+    outline: none;
+    box-shadow: 0 0 0 2px rgba(0, 122, 217, 0.2);
+  }
+}
+
+/* Buttons Container */
+.dialog-actions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+
+  .p-button{
+    height: 38px;
+    border-radius: 10px;
+    margin-top: 25px;
+
+  }
+}
+
+
+
